[package]
name = "screeps-starter-rust"
version = "0.0.0"
authors = []
edition = "2018"

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.6"
screeps-game-api = "0.9"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "^1.0.41"
lazy_static = "1.4.0"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
